--- a/src/components/input/style.scss
+++ b/src/components/input/style.scss
@@ -1,11 +1,18 @@
 .input-field {
-  padding: 5px 10px;
+  display: flex;
+  z-index: 3;
+  width: 400px;
+  height: 44px;
+  padding: 0px 30px;
+  background: #fff;
   border: 3px solid grey;
-  border-radius: 5px;
+  box-shadow: none;
+  border-radius: 24px;
   font-size: 24px;
 
   &:focus {
-    box-shadow: none;
+    box-shadow: 0 1px 6px 0 rgba(32, 33, 36, .28);
+    border-color: rgba(223, 225, 229, 0);
     outline: none;
   }
 
