--- a/src/components/Autocomplete/style.scss
+++ b/src/components/Autocomplete/style.scss
@@ -1,5 +1,5 @@
 .input-suggestions {
-  paddding: 10px;
+  padding: 10px;
   border: 1px solid rgb(195, 185, 183);
   border-radius: 10px;
   margin-top: 10px;
